--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ SONATYPE_AUTOMATIC_RELEASE=true
 
 GROUP=io.github.theapache64
 POM_ARTIFACT_ID=retrosheet
+# [latest version - i promise!]
 VERSION_NAME=3.0.3
 
 POM_NAME=Retrosheet
